--- a/week4_demo/index.html
+++ b/week4_demo/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Tito Villacorta">
     <meta name="description" content="W4 Demo">
 
-    <title>Movie Title</title>
+    <title>Scooby-Doo</title>
 </head>
 <body>
     <div id="container">
         <div id="header"> 
 
-            <h1><em>TITLE</em></h1>
+            <h1><em>Scooby-Doo</em></h1>
 
             
 
@@ -38,12 +38,12 @@
         <div id="content">
 
             <!--section header-->
-            <h2>All About <em>"Title"</em></h2>
+            <h2>All About <em>"Scooby-Doo"</em></h2>
 
             <div id="page-content">
 
 
-            <p>A brief introduction / overview of the movie <em>Title</em>. (in your own words)</p>
+            <p>Mystery Inc. A group of crime solvers goes to an island named <i>Spooky Island</i> to investigate and solve the mystery about the monsters that have started to appear.</p>
 
 
             <!--images for this page-->
@@ -51,8 +51,9 @@
 
             <div class="info">
 
-                <p><b>Director:</b> Name</p>
+                <p><b>Director:</b> Raja Gosnell</p>
 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/o3dbeI0BU1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
             </div><!--/ .info-->
 
@@ -69,7 +70,7 @@
             <br>
             <p>&copy; Tito Villacorta | SE111.68 | Winter 2023</p>
             <br>
-            <img src="images/about.png">
+            <img src="images/about.png" alt="Validation">
 
         </div><!--/ #footer-->
 
