--- a/week4_demo/review.html
+++ b/week4_demo/review.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Tito Villacorta">
     <meta name="description" content="W4 Demo">
 
-    <title>Movie Title</title>
+    <title>Scooby-Doo</title>
 </head>
 <body>
     <div id="container">
         <div id="header"> 
 
-            <h1><em>TITLE</em></h1>
+            <h1><em>Scooby-Doo</em></h1>
 
             
 
@@ -38,22 +38,25 @@
         <div id="content">
 
             <!--section header-->
-            <h2>Review of <em>"Title"</em></h2>
+            <h2>Review of <em>"Scooby-Doo"</em></h2>
 
             <div id="page-content">
 
                 <p><b>Tito Villacorta</b></p>
                 <p><i>January 30, 2023</i></p>
 
-                <p>My  review on <em>Title</em></p>
+                <p>My  review on <em>Scooby-Doo</em> is an amazing movie and just might be the best form of media within the <em>Scooby-Doo</em> IP. The reason I believe this is that it had perfect amount of comedy, action and story telling for a live action adaptation.</p>
+
+                <p>My favorite actor within the movie was Matthew Lillard, the way he personified Shaggy it was perfect, to the last minute detail. No matter what role he plays wether it be his role in <i>Scream</i> or his role in <em>Scooby-Doo</em>, Matthew Lillard has such a wide range.</p>
 
                 <div class="info">
 
-                    <h3><em>Title</em> Trivia!</h3>
+                    <h3><em>Scooby-Doo</em> Trivia!</h3>
 
                     <ul>
-                        <li>Trivia #1: </li>
-
+                        <li>Trivia #1: Despite the movie poster of the gang being in front of the shadow of the Luna Ghost the villain only appears in the first few minutes of the film. This is because the Luna Ghost was originally intended to be the main antagonist in an early draft of the script.</li>
+                        <li>Trivia #2: After filming was completed, Freddie Prinze Jr. had to shave his head, because the bleach ruined his hair.</li>
+                        <li>Trivia #3: The band Weezer was asked to make appearances as actors, but rejected the offer.</li>
                     </ul>
 
 
@@ -72,7 +75,7 @@
             <br>
             <p>&copy; Tito Villacorta | SE111.68 | Winter 2023</p>
             <br>
-            <!--*** TO ADD *** image of validation screenshot for THIS page-->
+            <img src="images/review.png" alt="Validation">
 
         </div><!--/ #footer-->
 
